# mine-ai-agent-chat

./: .gitignore  README.md  scheduler-analysis-and-guide.md  skills-lock.json
.claude/: settings.local.json
.playwright-mcp/: page-2026-03-31T02-37-10-992Z.yml  page-2026-03-31T02-37-32-317Z.yml  page-2026-03-31T02-50-42-741Z.yml  page-2026-04-02T06-56-20-921Z.yml  page-2026-04-02T06-56-32-352Z.yml  page-2026-04-02T06-56-46-302Z.yml  page-2026-04-02T06-56-51-411Z.yml  page-2026-04-02T06-57-18-917Z.yml  page-2026-04-02T07-00-18-887Z.yml  page-2026-04-02T07-01-18-813Z.yml
.specify/integrations/: claude.manifest.json  speckit.manifest.json
ai-scheduler-skill/: .dockerignore  .env.example  .gitignore  CODESPACES.md  DOCKER-DEPLOY.md  DOCKER.md  Dockerfile  IMPROVEMENTS.md  PORTABILITY-TEST.md  README.md  TEST-GUIDE.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  scheduler.example.yaml  start-docker.sh  test-docker.sh  test_skill.py
ai-scheduler-skill/.devcontainer/: devcontainer.json  post-create.sh  post-start.sh
ai-scheduler-skill/.github/workflows/: docker-test.yml  portability-test.yml
ai-scheduler-skill/config/: scheduler.yaml
ai-scheduler-skill/docs/: README.md  architecture-guide.md  architecture.md  migration-guide.md  test-api.html  项目说明.md
ai-scheduler-skill/examples/advanced/: openclaw_style_heartbeat.py
ai-scheduler-skill/examples/basic/: 01_quickstart.py  02_config_file.py
ai-scheduler-skill/scripts/: README.md  test-portability.ps1  test-portability.sh
ai-scheduler-skill/src/scheduler_skill/: __init__.py  cli.py
ai-scheduler-skill/src/scheduler_skill/api/: __init__.py  server.py
ai-scheduler-skill/src/scheduler_skill/connectors/: __init__.py  base.py  http.py  search.py  unified.py
ai-scheduler-skill/src/scheduler_skill/core/: __init__.py  config.py  context.py  models.py  scheduler.py  state.py
ai-scheduler-skill/src/scheduler_skill/mcp/: __init__.py  server.py
ai-scheduler-skill/src/scheduler_skill/notify_ui/: README.md  __init__.py  server.py
ai-scheduler-skill/src/scheduler_skill/notify_ui/static/: index.html
ai-scheduler-skill/src/scheduler_skill/skill_integration/: README.md  __init__.py  scheduler_skill.py
ai-scheduler-skill/src/scheduler_skill/storage/: __init__.py  base.py  memory_storage.py  postgres_storage.py  redis_storage.py  sqlite_storage.py
my-chat-ui/: VOICE_FEATURE_GUIDE.md  package.json  pnpm-lock.yaml
my-chat-ui/sovits-service/: ARCHITECTURE.md  README.md  code_interpreter.py  config.yaml  main.py  qwen_tts.py  realtime_voice_server.py  requirements-py314.txt  requirements.txt  (+6 more)
(+211 files in other folders)
