[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-scheduler-skill"
version = "1.0.0"
description = "统一混合调度系统 - MCP工具/Python SDK/REST API三种使用方式"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "AI Scheduler Team" },
]
keywords = [
    "scheduler",
    "cron",
    "heartbeat",
    "mcp",
    "ai",
    "agent",
    "automation",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    # 核心依赖
    "apscheduler>=3.10.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "aiohttp>=3.8.0",
    "aiofiles>=23.0.0",
    "croniter>=2.0.0",
    
    # 存储
    "aiosqlite>=0.19.0",
    
    # API服务 (可选)
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    
    # MCP (可选)
    "mcp>=1.0.0",
]

[project.optional-dependencies]
# 完整功能
all = [
    "openai>=1.0.0",
    "anthropic>=0.8.0",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
    "psycopg2-binary>=2.9.0",
]

# LLM支持
llm = [
    "openai>=1.0.0",
    "anthropic>=0.8.0",
]

# 数据库存储
database = [
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.0",
]

# 分布式
redis = [
    "redis>=5.0.0",
]

# 开发依赖
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
]

[project.scripts]
scheduler-skill = "scheduler_skill.cli:main"

[project.urls]
Homepage = "https://github.com/your-org/ai-scheduler-skill"
Documentation = "https://github.com/your-org/ai-scheduler-skill/docs"
Repository = "https://github.com/your-org/ai-scheduler-skill"
Issues = "https://github.com/your-org/ai-scheduler-skill/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/scheduler_skill"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
